Working demo with akool, microsoft tts, and openAI llm

--- a/.env.example
+++ b/.env.example
@@ -10,21 +10,29 @@ AKOOL_API_KEY=your_akool_api_key_here
 AKOOL_AVATAR_ID=your_avatar_id_here
 
 # ASR (Automatic Speech Recognition) Configuration
-# Choose your ASR provider: azure, openai, elevenlabs, etc.
-ASR_VENDOR=azure
+# Choose your ASR provider: microsoft, openai, elevenlabs, etc.
+ASR_VENDOR=microsoft
 ASR_API_KEY=your_asr_api_key_here
 ASR_REGION=your_asr_region_here
 ASR_LANGUAGE=en-US
 
 # LLM (Large Language Model) Configuration
 # For custom LLM endpoints (or use standard providers via URL)
-LLM_URL=your_custom_llm_url_here
-LLM_API_KEY=your_llm_api_key_here
-LLM_MODEL=gpt-4
+LLM_URL=https://api.openai.com/v1/chat/completions
+LLM_VENDOR=openai
+LLM_API_KEY=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
+LLM_MODEL=gpt-4o-mini
+LLM_MAX_TOKENS=500
+LLM_TEMPERATURE=0.7
 LLM_SYSTEM_PROMPT=You are a friendly AI anime girlfriend. Respond naturally in a caring, playful manner. Keep responses brief and conversational since this is voice-to-voice communication. Avoid long paragraphs and speak as if having a real conversation.
 
-# TTS (Text-to-Speech) Configuration
-# Choose your TTS provider: microsoft, openai, elevenlabs, etc.
+# TTS (Text-to-Speech) Configuration - OpenAI
+# Get your API key from: https://platform.openai.com/api-keys
+OPENAI_TTS_API_KEY=your_openai_api_key_here
+OPENAI_TTS_VOICE=nova
+OPENAI_TTS_SPEED=1.0
+
+# Legacy TTS Configuration (kept for reference)
 TTS_VENDOR=microsoft
 TTS_API_KEY=your_tts_api_key_here
 TTS_REGION=your_tts_region_here
