Replace TTS with cartesia for testing

--- a/.env.example
+++ b/.env.example
@@ -39,6 +39,15 @@ TTS_REGION=your_tts_region_here
 TTS_VOICE=en-US-AriaNeural
 TTS_SPEED=1.0
 
+# Hume TTS Configuration 
+HUME_API_KEY=your_hume_api_key_here
+HUME_VOICE_ID=your_hume_voice_id_here  
+
+# CARTESIA TTS Configuration 
+CARTESIA_API_KEY=your_cartesia_api_key_here
+CARTESIA_MODEL_ID=sonic-3
+CARTESIA_VOICE_ID=your_cartesia_voice_id_here
+
 # Server Configuration
 PORT=3000
 
