Added RTM for transcript and messaging feature

--- a/.env.example
+++ b/.env.example
@@ -10,8 +10,7 @@ AKOOL_API_KEY=your_akool_api_key_here
 AKOOL_AVATAR_ID=your_avatar_id_here
 
 # ASR (Automatic Speech Recognition) Configuration
-# Choose your ASR provider: microsoft, openai, elevenlabs, etc.
-ASR_VENDOR=microsoft
+ASR_VENDOR=ares
 ASR_API_KEY=your_asr_api_key_here
 ASR_REGION=your_asr_region_here
 ASR_LANGUAGE=en-US
@@ -26,27 +25,15 @@ LLM_MAX_TOKENS=500
 LLM_TEMPERATURE=0.7
 LLM_SYSTEM_PROMPT=You are a friendly AI anime girlfriend. Respond naturally in a caring, playful manner. Keep responses brief and conversational since this is voice-to-voice communication. Avoid long paragraphs and speak as if having a real conversation.
 
-# TTS (Text-to-Speech) Configuration - OpenAI
-# Get your API key from: https://platform.openai.com/api-keys
-OPENAI_TTS_API_KEY=your_openai_api_key_here
-OPENAI_TTS_VOICE=nova
-OPENAI_TTS_SPEED=1.0
+# TTS Configuration options
+TTS_Microsoft_VENDOR=microsoft
+TTS_Microsoft_API_KEY=your_tts_api_key_here
+TTS_Microsoft_REGION=your_tts_region_here
+TTS_Microsoft_VOICE=en-US-AriaNeural
+TTS_Microsoft_SPEED=1.0
 
-# Legacy TTS Configuration (kept for reference)
-TTS_VENDOR=microsoft
-TTS_API_KEY=your_tts_api_key_here
-TTS_REGION=your_tts_region_here
-TTS_VOICE=en-US-AriaNeural
-TTS_SPEED=1.0
-
-# Hume TTS Configuration 
-HUME_API_KEY=your_hume_api_key_here
-HUME_VOICE_ID=your_hume_voice_id_here  
-
-# CARTESIA TTS Configuration 
-CARTESIA_API_KEY=your_cartesia_api_key_here
-CARTESIA_MODEL_ID=sonic-3
-CARTESIA_VOICE_ID=your_cartesia_voice_id_here
+TTS_ElevenLabs_API_KEY=your_elevenlabs_api_key_here
+TTS_ElevenLabs_VOICE_ID=your_elevenlabs_voice_id_here
 
 # Server Configuration
 PORT=3000
