--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "agora-rtc-sdk-ng": "^4.24.1",
+    "agora-rtm": "^2.2.3-2",
     "axios": "^1.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
