Replace TTS with Elevenlabs

--- a/.env.example
+++ b/.env.example
@@ -32,8 +32,10 @@ TTS_Microsoft_REGION=your_tts_region_here
 TTS_Microsoft_VOICE=en-US-AriaNeural
 TTS_Microsoft_SPEED=1.0
 
+TTS_ElevenLabs_BASE_URL=https://api.elevenlabs.io/v1
 TTS_ElevenLabs_API_KEY=your_elevenlabs_api_key_here
-TTS_ElevenLabs_VOICE_ID=your_elevenlabs_voice_id_here
+TTS_ElevenLabs_VOICE_ID=cgSgspJ2msm6clMCkdW9
+TTS_ElevenLabs_MODEL_ID=eleven_multilingual_v2
 
 # Server Configuration
 PORT=3000
