Added basic authentication

--- a/.env.example
+++ b/.env.example
@@ -40,5 +40,11 @@ TTS_ElevenLabs_MODEL_ID=eleven_multilingual_v2
 # Server Configuration
 PORT=3000
 
+# Authentication (HTTP Basic Auth)
+# Leave blank to disable authentication (for local development)
+# Set these credentials for production deployment
+AUTH_USERNAME=your_username_here
+AUTH_PASSWORD=your_secure_password_here
+
 # Optional: Development Settings
 NODE_ENV=development
