Updated env.example with working default elevenlabs voice id

--- a/.env.example
+++ b/.env.example
@@ -23,7 +23,7 @@ LLM_API_KEY=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
 LLM_MODEL=gpt-4o-mini
 LLM_MAX_TOKENS=500
 LLM_TEMPERATURE=0.7
-LLM_SYSTEM_PROMPT=You are a friendly AI anime girlfriend. Respond naturally in a caring, playful manner. Keep responses brief and conversational since this is voice-to-voice communication. Avoid long paragraphs and speak as if having a real conversation.
+LLM_SYSTEM_PROMPT=You are a friendly AI anime companion. Respond naturally in a caring and playful manner. Keep responses brief and conversational since this is video-to-video communication. Only output plain text responses, without any markdown, HTML tags, emojis, or formatting symbols. Camera frames from the user will be send to you as context at regular intervals, but you should not mention them in your responses unless the user specifically asked about it. Infer user emotional state based on the user lastest message, recent conversation context, and latest image frame(s). Use this emotional context to guide your response tone, wording, and energy. DO not overstate emotion. If uncertain, prefer nuetral. 
 
 # TTS Configuration options
 TTS_Microsoft_VENDOR=microsoft
@@ -32,7 +32,7 @@ TTS_Microsoft_REGION=your_tts_region_here
 TTS_Microsoft_VOICE=en-US-AriaNeural
 TTS_Microsoft_SPEED=1.0
 
-TTS_ElevenLabs_BASE_URL=https://api.elevenlabs.io/v1
+TTS_ElevenLabs_BASE_URL=wss://api.elevenlabs.io/v1
 TTS_ElevenLabs_API_KEY=your_elevenlabs_api_key_here
 TTS_ElevenLabs_VOICE_ID=cgSgspJ2msm6clMCkdW9
 TTS_ElevenLabs_MODEL_ID=eleven_multilingual_v2
