added conversation history, username prompt for more personalization, updated AI girlfriend background with hobbies, etc.

--- a/.env.example
+++ b/.env.example
@@ -38,6 +38,10 @@ TTS_ElevenLabs_API_KEY=your_elevenlabs_api_key_here
 TTS_ElevenLabs_VOICE_ID=cgSgspJ2msm6clMCkdW9
 TTS_ElevenLabs_MODEL_ID=eleven_multilingual_v2
 
+TTS_MINIMAX_API_KEY=your_minimax_api_key_here
+TTS_MINIMAX_GROUP_ID=your_minimax_group_id_here
+TTS_MINIMAX_VOICE_ID=English_PlayfulGirl
+
 # Server Configuration
 PORT=3000
 
